fix view on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ body {
 /* ALL PAGE CONTAINER */
 .wrapper{
   display: grid;
+  width: 100%;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
